--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,38 +1,26 @@
-body {
-    margin:0;
-    padding:0;
-  }
-  #game-container {
-    overflow:hidden;
-    width:430px;
-    position: absolute;
-    margin: 0 auto;
-    left: 600px;
-    top: 100px;
-  
-  }
-  .box {
-    width:100px;
-    height:100px;
-    float:left;
-    background-color: blueviolet;
-    margin-bottom:10px;
-  }
-  
-  .spacing {
-    margin-right:10px;
-  }
-  #goblin {
-    width: 100px;
-    height: 100px;
-  }
-  
-  .hide {
-    display: none;
-  }
-  .goblin {
-    margin:0;
-    padding:0;
-    width: 100px;
-    height: 100px;
-  }
+
+.container {
+  display: flex;
+  width: 600px;
+  height: auto;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: auto;
+}
+
+.hole {
+  border: solid 2px #7a70144d;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px 3px grey;
+  width: 150px;
+  height: 150px;
+  background-color: yellow;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.goblin {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
